@@ -7,8 +7,10 @@ import com.example.InsurAI.repository.PolicyPlanRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,18 +20,91 @@ public class AdminPolicyService {
 
     private final PolicyPlanRepository policyPlanRepository;
 
+    // =============== FILE UPLOAD HANDLING ===============
+    public void attachFileToPlan(Long policyId, MultipartFile file) throws IOException {
+        if (file == null || file.isEmpty()) {
+            throw new IllegalArgumentException("File cannot be empty");
+        }
+
+        // File size validation (max 10MB)
+        long maxFileSize = 10 * 1024 * 1024;
+        if (file.getSize() > maxFileSize) {
+            throw new IllegalArgumentException("File size exceeds 10MB limit");
+        }
+
+        // Allowed extensions
+        String[] allowedExtensions = {".pdf", ".doc", ".docx", ".txt", ".xls", ".xlsx"};
+        String fileName = file.getOriginalFilename().toLowerCase();
+        boolean isAllowed = false;
+        for (String ext : allowedExtensions) {
+            if (fileName.endsWith(ext)) {
+                isAllowed = true;
+                break;
+            }
+        }
+        if (!isAllowed) {
+            throw new IllegalArgumentException("File type not allowed. Use: PDF, DOC, DOCX, TXT, XLS, XLSX");
+        }
+
+        PolicyPlan plan = policyPlanRepository.findById(policyId)
+                .orElseThrow(() -> new IllegalArgumentException("Policy plan not found"));
+
+        // Store file in database
+        plan.setFileContent(file.getBytes());
+        plan.setFileName(sanitizeFileName(file.getOriginalFilename()));
+        plan.setFileContentType(file.getContentType());
+        plan.setFileOriginalName(file.getOriginalFilename());
+        plan.setFileUploadedAt(LocalDateTime.now());
+
+        policyPlanRepository.save(plan);
+    }
+
+    // Remove file from policy
+    @Transactional
+    public void removeFileFromPlan(Long policyId) {
+        PolicyPlan plan = policyPlanRepository.findById(policyId)
+                .orElseThrow(() -> new IllegalArgumentException("Policy plan not found"));
+
+        plan.setFileContent(null);
+        plan.setFileName(null);
+        plan.setFileContentType(null);
+        plan.setFileOriginalName(null);
+        plan.setFileUploadedAt(null);
+
+        policyPlanRepository.save(plan);
+    }
+
+    // Get file for download (customers)
+    public byte[] getFileForPolicy(Long policyId) {
+        PolicyPlan plan = policyPlanRepository.findById(policyId)
+                .orElseThrow(() -> new IllegalArgumentException("Policy plan not found"));
+
+        if (plan.getFileContent() == null || plan.getFileContent().length == 0) {
+            throw new IllegalArgumentException("No file attached to this policy");
+        }
+
+        return plan.getFileContent();
+    }
+
+    // Helper: Sanitize file name to prevent path traversal attacks
+    private String sanitizeFileName(String fileName) {
+        return fileName.replaceAll("[^a-zA-Z0-9._-]", "_");
+    }
+
+    // ====================================================
+
     @Transactional(readOnly = true)
     public List<PolicyPlanDto> listAllPlans() {
         return policyPlanRepository.findAll()
                 .stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public PolicyPlanDto createPlan(PolicyPlanCreateUpdateRequest req) {
         PolicyPlan plan = new PolicyPlan();
-        apply(plan, req);
+        applyPlan(plan, req);
         PolicyPlan saved = policyPlanRepository.save(plan);
         return toDto(saved);
     }
@@ -38,7 +113,7 @@ public class AdminPolicyService {
     public PolicyPlanDto updatePlan(Long id, PolicyPlanCreateUpdateRequest req) {
         PolicyPlan plan = policyPlanRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Policy plan not found: " + id));
-        apply(plan, req);
+        applyPlan(plan, req);
         PolicyPlan saved = policyPlanRepository.save(plan);
         return toDto(saved);
     }
@@ -46,7 +121,7 @@ public class AdminPolicyService {
     @Transactional
     public PolicyPlanDto updateStatus(Long id, boolean active) {
         PolicyPlan plan = policyPlanRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Policy plan not found: " + id));
+                .orElseThrow(() -> new IllegalArgumentException("Policy plan not found"));
         plan.setActive(active);
         PolicyPlan saved = policyPlanRepository.save(plan);
         return toDto(saved);
@@ -57,7 +132,7 @@ public class AdminPolicyService {
         return policyPlanRepository.findByActiveTrue()
                 .stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void deletePlan(Long id) {
@@ -67,44 +142,7 @@ public class AdminPolicyService {
         policyPlanRepository.deleteById(id);
     }
 
-    @Data
-    @AllArgsConstructor
-    public static class PolicyCategoryStat {
-        private String category;
-        private long totalPolicies;
-    }
-
-    @Data
-    @AllArgsConstructor
-    public static class PolicyUsageStat {
-        private String category;
-        private long usageCount;
-    }
-
-    @Transactional(readOnly = true)
-    public List<PolicyCategoryStat> getCategoryStats() {
-        return policyPlanRepository.findCategoryTotals()
-                .stream()
-                .map(row -> new PolicyCategoryStat(
-                        (String) row[0],
-                        ((Number) row[1]).longValue()
-                ))
-                .toList();
-    }
-
-    @Transactional(readOnly = true)
-    public List<PolicyUsageStat> getUsageStats() {
-        return policyPlanRepository.findCategoryTotals()
-                .stream()
-                .map(row -> new PolicyUsageStat(
-                        (String) row[0],
-                        0L
-                ))
-                .toList();
-    }
-
-
-    private void apply(PolicyPlan plan, PolicyPlanCreateUpdateRequest req) {
+    private void applyPlan(PolicyPlan plan, PolicyPlanCreateUpdateRequest req) {
         plan.setName(req.getName());
         plan.setCategory(req.getCategory());
         plan.setPremiumAmount(req.getPremiumAmount());
@@ -114,6 +152,7 @@ public class AdminPolicyService {
     }
 
     private PolicyPlanDto toDto(PolicyPlan plan) {
+        long fileSizeBytes = plan.getFileContent() != null ? plan.getFileContent().length : 0;
         return new PolicyPlanDto(
                 plan.getId(),
                 plan.getName(),
@@ -121,7 +160,11 @@ public class AdminPolicyService {
                 plan.getPremiumAmount(),
                 plan.getCoverageAmount(),
                 plan.isActive(),
-                plan.getDescription()
+                plan.getDescription(),
+                plan.getFileName(),        // File name for display
+                plan.getFileContentType(), // MIME type
+                plan.getFileUploadedAt(),  // Upload timestamp
+                fileSizeBytes              // File size
         );
     }
 }
